responsive - extra width problem solved due to overflow not being disabled in the events section

--- a/SASS/responsive.scss
+++ b/SASS/responsive.scss
@@ -1,4 +1,7 @@
 @media (max-width:765px) {
+    html {
+        width: 100vw;
+    }
     .home {
         #hero-container {
             .img {
