--- a/SASS/style.scss
+++ b/SASS/style.scss
@@ -248,6 +248,7 @@ nav {
     align-items: center;
     flex-direction: column;
     z-index: 1;
+    overflow: hidden;
     cursor: none;
     #cursor_circle_events {
         position: absolute;
